--- a/Teachers/Robin/awards.html
+++ b/Teachers/Robin/awards.html
@@ -24,12 +24,12 @@
     </div>
   
     <ul id="nav">
-      <a href="#"><li id="introduction" class="navBtn" ><p>個人簡介</p></li></a>
+      <a href="index.html"><li id="introduction" class="navBtn" ><p>個人簡介</p></li></a>
       <a href="teaching.html"><li id="teaching" class="navBtn"><p>授課內容</p></li></a>
       <a href="publications.html"><li id="publication" class="navBtn"><p>學術發表與研究</p></li></a>
       <a href="instruct.hmtl"><li id="instruct" class="navBtn"><p>論文指導</p></li></a>
       <a href="international.html"><li id="international" class="navBtn"><p>國際交流</p></li></a>
-      <a href="awards.html"><li id="awards" class="navBtn active"><p>獲獎紀錄</p></li></a>
+      <a href="#"><li id="awards" class="navBtn active"><p>獲獎紀錄</p></li></a>
     </ul>
 
    
