--- a/Teachers/Robin/robin_blank.html
+++ b/Teachers/Robin/robin_blank.html
@@ -24,8 +24,8 @@
     </div>
   
     <ul id="nav">
-      <a href="#"><li id="introduction" class="navBtn" ><p>個人簡介</p></li></a>
-      <a href="teaching.html"><li id="teaching" class="navBtn active"><p>授課內容</p></li></a>
+      <a href="index.html"><li id="introduction" class="navBtn active" ><p>個人簡介</p></li></a>
+      <a href="teaching.html"><li id="teaching" class="navBtn"><p>授課內容</p></li></a>
       <a href="publications.html"><li id="publication" class="navBtn"><p>學術發表與研究</p></li></a>
       <a href="instruct.hmtl"><li id="instruct" class="navBtn"><p>論文指導</p></li></a>
       <a href="international.html"><li id="international" class="navBtn"><p>國際交流</p></li></a>
@@ -50,10 +50,10 @@
       </form>
     </div>
   	<ul id="subNav">
-    	<li><h5>test</h5></li>
-    	<li><h5>test</h5></li>
-    	<li><h5>test</h5></li>
-    	<li><h5>test</h5></li>
+      <a href="#"><li><h5>test</h5></li></a>
+      <a href="#"><li><h5>test</h5></li></a>
+      <a href="#"><li><h5>test</h5></li></a>
+      <a href="#"><li><h5>test</h5></li></a>
     </ul>
     
     <div id="something">
