--- a/index.html
+++ b/index.html
@@ -98,6 +98,15 @@
           	<a class="btn btn-primary" href="Teachers/Robin/index.html">Robin!!</a>
           </div>
         </div>
+        
+        <div class="span4 box1">
+        	<h2>Chou Test</h2>
+          <p>Since I haven't learned how to coding a good website, I set a web for my teacher, Chou. But after I learned, I want to try to code a brand new for my teacher. Just take a look </p>
+          <div>
+          	<a class="btn btn-primary" href="Teachers/Chou/index.html">Chou!!</a>
+          </div>
+         	
+        </div>
       </div>
     </div>
     <script src="http://code.jquery.com/jquery.js"></script>
