--- a/Teachers/Chou/index.html
+++ b/Teachers/Chou/index.html
@@ -7,7 +7,7 @@
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 <style>
-
+body { background-image:url(img/wavegrid.png);}
 </style>
 </head>
 <body>
