--- a/Teachers/Robin/publications.html
+++ b/Teachers/Robin/publications.html
@@ -40,34 +40,34 @@
   	<article>
     	<h3>中英文期刊</h3>
       <ol class="publist">
-        <li>陳榮政 (2001)。建構教師之社會福利輸送概念---以受虐兒童為例。國教天地，148，28-35。</li>
-        <li>陳榮政 (2001)。由女性主義的觀點看國小英語教育的實施。國教天地，144，23-26。</li>
-        <li>陳榮政 (2001)。「經師」、「人師」？---由行動研究之精神看教師之校園定位。國教之友，52(3)，25-28。</li>
-        <li>陳榮政 (2002)。美麗新世界的憧憬與迷惘---論基因科技的風潮。中等教育，53(1)，104-115。</li>
-        <li>Chen, R. J. (2007). Biotechnology  and education&rsquo;s roles. ISKANJA, 25,  41-51. </li>
-        <li>Chen, R.J. (2007). Book review  on Japan and German under U.S. Occupation. Journal  of Education Policy, 22(6), 709-720. (SSCI)</li>
-        <li>陳榮政 (2007)。英國新工黨政府教育政策簡介。比較教育，62，139-153。</li>
+        <li>陳榮政(2012)。論教育政策學之建立：以教育公平政策意涵之分析為例。教育政策論壇，15(1)，1-24。</li>
+        <li>Chen, R. J. &amp; Chiu, S. F.  (2010). The amoeboid neo-liberalism and the rising state commercialism in  education. US-China Education Review, 7(10), 51-61. (SSCI)</li>
+        <li>Chen, R. J. (2010). Shifting  from Equity to Adequacy in Education Policy Making: Taiwan&rsquo;s Experience.  ISKANJA, 37,48-59.</li>
         <li>陳榮政 (2010)。英國中等教育民營化過程之分析。教育研究與發展，6(3)，61-87。</li>
-        <li>Chen, R. J. (2010). Shifting from Equity to Adequacy in  Education Policy Making: Taiwan&rsquo;s Experience. ISKANJA, 37,48-59. </li>
-        <li>Chen, R. J. &amp; Chiu, S. F.  (2010). The amoeboid neo-liberalism and the rising state commercialism in  education. US-China Education Review, 7(10),  51-61. (SSCI)</li>
-        <li>陳榮政(2012)。論教育政策學之建立：以教育公平政策意涵之分析為例。教育政策論壇，15(1)，1-24。(TSSCI)</li>
+        <li>陳榮政 (2007)。英國新工黨政府教育政策簡介。比較教育，62，139-153。</li>
+        <li>Chen, R.J. (2007). Book review  on Japan and German under U.S. Occupation. Journal of Education Policy, 22(6),  709-720. (SSCI)</li>
+        <li>Chen, R. J. (2007).  Biotechnology and education&rsquo;s roles. ISKANJA, 25, 41-51.</li>
+        <li>陳榮政 (2002)。美麗新世界的憧憬與迷惘---論基因科技的風潮。中等教育，53(1)，104-115。</li>
+        <li>陳榮政 (2001)。「經師」、「人師」？---由行動研究之精神看教師之校園定位。國教之友，52(3)，25-28。</li>
+        <li>陳榮政 (2001)。由女性主義的觀點看國小英語教育的實施。國教天地，144，23-26。</li>
+        <li>陳榮政 (2001)。建構教師之社會福利輸送概念---以受虐兒童為例。國教天地，148，28-35。</li>
       </ol>
   	</article>
   	<a name="book"></a>
   	<article>
     	<h3>中英文專書</h3>
       <ol class="publist">
-        <li>陳榮政 (2004)。再思科技與人文對話之可能：基因科技vs.教育專業。載於「2004年師範院校教育學術研討會」論文集。屏東：屏東師院。</li>
-        <li>陳榮政(2005)。由教育的跨專業需求看師院轉型之必要：以教育專業結合社會福利專業之分析為例。載於「2005年台灣教育學術研討會」論文集。台東：台東大學。</li>
-        <li>Chen, R. J. (2006). New  challenge for teacher training: facing the trend of biotechnology. in Popov,  N., Wolhuter, C., Heller, C., &amp; Kysilka, M. (eds.) Comparative Education and Teacher Training Vol. 4 Sofia: Express Print. (ISBN:  0902983830)</li>
-        <li>Chen, R. J. (2007). The  application of sociology in comparative education. in Popov, N., Wolhuter, C.,  Heller, C., &amp; Kysilka, M. (eds.) Comparative  Education and Teacher Training Vol.5 Sofia:  Express Print. (ISBN: 9789549842098)</li>
-        <li>陳榮政（2007)。國家理論與國家角色的探討。載於「北京師範大學首屆教育社會論壇」論文集。北京：北京師範大學。</li>
-        <li>陳榮政(2010)。國家理論與國家機器。載於教育核心價值實踐之研究。台北：國家教育研究院籌備處。</li>
-        <li>陳榮政（2011）。比例時節能減碳教育之研究。載於王如哲主編，各國節能減碳教育比較。台北市：高等。</li>
-        <li>Chen, R. J. (2011). Development  of Higher Education in ASEAN: Taiwan&rsquo;s Perspectives. in Popov, N., Wolhuter, M.  Mihova, &amp; B. Leutwyler M. (eds.) Comparative  Education,Teacher Training, Social Inclusion and History of Education Vol.9 Sofia: Express Print. (ISBN: 9789549842173)</li>
-        <li>Wu, C. S. &amp; Chen, R. J. (2011). The right to education in  Taiwan. in Pampanini, G. Comparing the  Right to Education Policies. Methodological Issues. Catania, Italy:  Cooperativa Universitaria Editoriale Catanese di Magistero. (ISBN:  9788866000310)</li>
-        <li>陳榮政（校譯）（2011）。日常生活的社會學。台北市：學富。</li>
         <li>陳榮政（校譯）（2011）。基礎社會研究法。台北市：學富。）。台北市：學富。</li>
+        <li>陳榮政（校譯）（2011）。日常生活的社會學。台北市：學富。</li>
+        <li>Wu, C. S. &amp; Chen, R. J.  (2011). The right to education in Taiwan. in Pampanini, G. Comparing the Right  to Education Policies. Methodological Issues. Catania, Italy: Cooperativa  Universitaria Editoriale Catanese di Magistero. (ISBN: 9788866000310)</li>
+        <li>Chen, R. J. (2011). Development  of Higher Education in ASEAN: Taiwan&rsquo;s Perspectives. in Popov, N., Wolhuter, M.  Mihova, &amp; B. Leutwyler M. (eds.) Comparative Education,Teacher Training,  Social Inclusion and History of Education Vol.9 Sofia: Express Print. (ISBN:  9789549842173)</li>
+        <li>陳榮政（2011）。比例時節能減碳教育之研究。載於王如哲主編，各國節能減碳教育比較。台北市：高等。</li>
+        <li>陳榮政(2010)。國家理論與國家機器。載於教育核心價值實踐之研究。台北：國家教育研究院籌備處。</li>
+        <li>陳榮政（2007)。國家理論與國家角色的探討。載於「北京師範大學首屆教育社會論壇」論文集。北京：北京師範大學。</li>
+        <li>Chen, R. J. (2007). The  application of sociology in comparative education. in Popov, N., Wolhuter, C.,  Heller, C., &amp; Kysilka, M. (eds.) Comparative Education and Teacher Training  Vol.5 Sofia: Express Print. (ISBN: 9789549842098)</li>
+        <li>Chen, R. J. (2006). New  challenge for teacher training: facing the trend of biotechnology. in Popov,  N., Wolhuter, C., Heller, C., &amp; Kysilka, M. (eds.) Comparative Education  and Teacher Training Vol. 4 Sofia: Express Print. (ISBN: 0902983830)</li>
+        <li>陳榮政(2005)。由教育的跨專業需求看師院轉型之必要：以教育專業結合社會福利專業之分析為例。載於「2005年台灣教育學術研討會」論文集。台東：台東大學。</li>
+        <li>陳榮政 (2004)。再思科技與人文對話之可能：基因科技vs.教育專業。載於「2004年師範院校教育學術研討會」論文集。屏東：屏東師院。</li>
       </ol>
 <p>&nbsp;</p>
   	</article>
@@ -75,31 +75,27 @@
   	<article>
     	<h3>中英文發表之研討會</h3>
       <ol class="publist">
-        <li>陳榮政 (2001)。基因生物科技發展潮流下的倫理教育。論文發表於「公民資質與師資培育國際學術研討會」。台北：臺灣師範大學。</li>
-        <li>陳榮政 (2003)。我國生物技術產業之政策分析。論文發表於「2003國家科技政策與國際競爭力學術研討會」。台北：台灣大學。</li>
-        <li>陳榮政 (2004)。再思科技與人文對話之可能：基因科技vs.教育專業。論文發表於「2004年師範院校教育學術研討會」。屏東：屏東師院。</li>
-        <li>Chen, R.J. (2005). An educational reflection for the trend of  biotech research in Taiwan,ROC. The 5th Comparative Education Society of  Asia (CESA) Biennial Conference. Malaysia: Universiti Kebangsaan .</li>
-        <li>Chen, R.J. (2005). Policy making in education and the role of  civil society. 論文發表於「教育研究卓越研討會」。嘉義：中正大學。</li>
-        <li>Chen, R.J. (2005). Biotechnology, education's role, and civil  society in South Asia. The 8th UKFIET International Conference on Education  and Development.UK: Oxford University.</li>
-        <li>陳榮政(2005)。由教育的跨專業需求看師院轉型之必要：以教育專業結合社會福利專業之分析為例。論文發表於「2005年台灣教育學術研討會」。台東：台東大學。</li>
-        <li>Chen, R. J. (2006). New challenge for teacher training: facing  the trend of biotechnology. presented   at the 4th Comparative Education and Teacher Training  Conference Bulgaria: Sofia University</li>
-        <li>Chen, R. J. (2007). The application of sociology in comparative  education.<br>
-          presented   at the 5th Comparative Education and Teacher Training  Conference Bulgaria: Sofia University</li>
-        <li>陳榮政(2007)。國家理論與國家角色的探討。論文發表於「北京師範大學首屆教育社會論壇」。北京：北京師範大學。</li>
-        <li>Chen, R. J. (2008).Privatizations  of state schools in England: an anatomical process. presented at the 2nd  International Conference on Education Models in Global Society. Slovenia:  Ljubljana University.</li>
-        <li>陳榮政(2008)。由英國教育改革看教育自由貿易主義的成形。論文發表於「2008 年教育發展與革新的沉思─哲學與歷史的觀察」研討會。台北市：臺灣師範大學。</li>
-        <li>Chen, R. J. (2009). Shifting from  Equity to Adequacy in Education Policy Making: Taiwan&rsquo;s Experience.  presented at the 4th Mediterranean Society of Comparative  Education Conference. Morocco: Rabat.</li>
-        <li>陳榮政(2009）。教育市場化與教育公平之社會學分析。論文發表於「民主深化過程中的國家教育發展」學術研討會。豐原：國家教育研究院籌備處。</li>
-        <li>陳榮政（2009）。2005年後英國地方教育行政組織之變革與影響。論文發表於「2009教育研究與教育政策之對話」國際學術研討會。台北：台灣師範大學。 </li>
-        <li>陳榮政（2010）。東協加三的政經分析與對台灣教育影響。論文發表於「2010兩岸教育高階論壇」國際學術研討會。台南：台南大學。</li>
+        <li>Wu, C. S. &amp; Chen, R.  J.(2012) .A study on Key Performance Indicators (KPIs) for Basic Education in  Taiwan. Paper presented at Innovation Research in the Changing and Challenge  World Conference. 16-18 May, 2012 Phuket, Thailand.</li>
+        <li>Chen, R. J. (2011).Development  of Higher Education in ASEAN: Taiwanese Perspective. The 9th International  Conference of Comparative Education and Teacher Training, Sofia University,  Sofia, Bulgaria. 5-9 July 2011. (NSC-99-2420-H-656-003-)</li>
+        <li>Wu, C. S. &amp; Chen, R. J.  (2011). The Right to Education in Taiwan---on Educational \\\Fundamental Act.  The 5th Mediterranean Society of Comparative Education Conference, Corsica  University, Corsica, France. 4-5 July 2011.</li>
+        <li>Chen, R. J. &amp; Wu, C. S.  (2011). Social change and education reform in Taiwan.Symposium: Educational  Innovations and Reforms in Countries Around the World, Seattle Pacific  University, Seattle, US. 29 June-1 July 2011. (NSC-99-2410-H-656-002-)&nbsp;</li>
         <li>Chen, R. J. (2011).The  operation of global regional organisations and the challenge for Taiwan  education. The 55th Annual Conference of Comparative and International  Education Society (CIES), Montreal, Quebec, Canada. 1-5 May 2011.  (NSC-99-2420-H-656-003-)</li>
-        <li>Chen, R. J. &amp; Wu, C. S. (2011). Social change and education reform in Taiwan.<br>
-          Symposium: Educational Innovations and Reforms in Countries Around the World,  Seattle Pacific University, Seattle, US. 29 June-1 July 2011.  (NSC-99-2410-H-656-002-)  </li>
-        <li>Wu, C. S. &amp; Chen, R. J. (2011). The Right to Education in Taiwan---on Educational  <br>
-          Fundamental Act. The 5th Mediterranean Society of Comparative Education  Conference, Corsica  University, Corsica,  France. 4-5 July 2011.</li>
-        <li>Chen, R. J. (2011).Development  of Higher Education in ASEAN: Taiwanese  <br>
-          Perspective. The 9th International Conference of Comparative Education and  Teacher Training, Sofia University, Sofia, Bulgaria. 5-9 July 2011. (NSC-99-2420-H-656-003-)</li>
-        <li>Wu, C. S. &amp; Chen, R. J.(2012) .A study on Key Performance Indicators (KPIs) for Basic Education in  Taiwan. Paper presented at Innovation Research in the Changing and  Challenge World Conference. 16-18 May, 2012 Phuket, Thailand.</li>
+        <li>陳榮政（2010）。東協加三的政經分析與對台灣教育影響。論文發表於「2010兩岸教育高階論壇」國際學術研討會。台南：台南大學。</li>
+        <li>陳榮政（2009）。2005年後英國地方教育行政組織之變革與影響。論文發表於「2009教育研究與教育政策之對話」國際學術研討會。台北：台灣師範大學。 </li>
+        <li>陳榮政(2009）。教育市場化與教育公平之社會學分析。論文發表於「民主深化過程中的國家教育發展」學術研討會。豐原：國家教育研究院籌備處。</li>
+        <li>Chen, R. J. (2009). Shifting  from Equity to Adequacy in Education Policy Making: Taiwan&rsquo;s Experience.  presented at the 4th Mediterranean Society of Comparative Education Conference.  Morocco: Rabat.</li>
+        <li>陳榮政(2008)。由英國教育改革看教育自由貿易主義的成形。論文發表於「2008 年教育發展與革新的沉思─哲學與歷史的觀察」研討會。台北市：臺灣師範大學。</li>
+        <li>Chen, R. J.  (2008).Privatizations of state schools in England: an anatomical process. presented  at the 2nd International Conference on Education Models in Global Society.  Slovenia: Ljubljana University.</li>
+        <li>陳榮政(2007)。國家理論與國家角色的探討。論文發表於「北京師範大學首屆教育社會論壇」。北京：北京師範大學。</li>
+        <li>Chen, R. J. (2007). The  application of sociology in comparative education. presented&nbsp;at the 5th  Comparative Education and Teacher Training Conference Bulgaria: Sofia  University</li>
+        <li>Chen, R. J. (2006). New  challenge for teacher training: facing the trend of biotechnology.  presented&nbsp;at the 4th Comparative Education and Teacher Training Conference  Bulgaria: Sofia University</li>
+        <li>陳榮政(2005)。由教育的跨專業需求看師院轉型之必要：以教育專業結合社會福利專業之分析為例。論文發表於「2005年台灣教育學術研討會」。台東：台東大學。</li>
+        <li>Chen, R.J. (2005).  Biotechnology, education's role, and civil society in South Asia. The 8th  UKFIET International Conference on Education and Development.UK: Oxford  University.</li>
+        <li>Chen, R.J. (2005). Policy  making in education and the role of civil society. 論文發表於「教育研究卓越研討會」。嘉義：中正大學。</li>
+        <li>Chen, R.J. (2005). An  educational reflection for the trend of biotech research in Taiwan,ROC. The 5th  Comparative Education Society of Asia (CESA) Biennial Conference. Malaysia:  Universiti Kebangsaan .</li>
+        <li>陳榮政 (2004)。再思科技與人文對話之可能：基因科技vs.教育專業。論文發表於「2004年師範院校教育學術研討會」。屏東：屏東師院。</li>
+        <li>陳榮政 (2003)。我國生物技術產業之政策分析。論文發表於「2003國家科技政策與國際競爭力學術研討會」。台北：台灣大學。</li>
+        <li>陳榮政 (2001)。基因生物科技發展潮流下的倫理教育。論文發表於「公民資質與師資培育國際學術研討會」。台北：臺灣師範大學。</li>
       </ol>
   	</article>
  
