--- a/WorkBoard/index.html
+++ b/WorkBoard/index.html
@@ -30,8 +30,8 @@ body {
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="#">Home</a></li>
-              <li><a href="login.html">Login</a></li>
-              <li><a href="message.html">Message</a></li>
+              <li><a href="../RestWeb/login.html">Login</a></li>
+              <li><a href="../RestWeb/message.html">Message</a></li>
             </ul>
           </div><!--/.nav-collapse -->
         </div>
