--- a/WorkBoard/work_blank.html
+++ b/WorkBoard/work_blank.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>Rest Web</title>
+<title>Work Board</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
@@ -18,6 +18,8 @@
 </div>
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
+<script src="http://www.parsecdn.com/js/parse-1.2.8.min.js"></script>
+
 <!--script src="js/bootstrap.min.js" type="text/javascript"></script-->
 <script type="text/javascript">
 
