--- a/Teachers/Robin/index.html
+++ b/Teachers/Robin/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
 <html>
 <head>
+
+<!--[if lt IE 9]><script src="http://css3-mediaqueries-js.googlecode.com/svn/trunk/css3-mediaqueries.js"></script><![endif]-->
+
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>榮政老師的網站</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 <link href="css/robin-all.css" rel="stylesheet" type="text/css">
 <style>
+
+@media screen and (min-width: 1500px) {
+body {
+	transform: scale(1.5);
+	-webkit-transform: scale(1.5); 
+	-webkit-transform-origin: 50% 0; 
+	-moz-transform: scale(1.5); 
+	-moz-transform-origin: 50% 0; 
+	-o-transform: scale(1.5); 
+	-o-transform-origin: 50% 0; 
+	-ms-transform: scale(1.5); 
+	-ms-transform-origin: 50% 0;}
+}
+
+
 </style>
 </head>
 <body>
