--- a/Teachers/PostModern/index.html
+++ b/Teachers/PostModern/index.html
@@ -2,16 +2,189 @@
 <html>
 <head>
 <meta charset="utf-8">
-<title>_blank</title>
+<title>Post Modern</title>
+<link href="css/reset.css" rel="stylesheet" type="text/css">
+
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
-<link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
-<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
+<link href="css/PostModern.css" rel="stylesheet" type="text/css">
+<!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
 <style>
 
+#schools {}
+.school { width:160px; margin-right:40px; float:left; }
+.schoolLogo { width:160px; height:160px; }
 </style>
 </head>
 <body>
-<div class="container">
+
+<header>
+	<div id="header_inner" class="container clearfix">
+		<div id="logo" ><img src="img/image021.png" width="100" ></div>
+		<div id="title">
+			<h1 id="mainTitle">2013年第一屆海峽兩岸教育學院領導人論壇</h1>
+			<h2 class="subTitle" >後現代教育發展與兩岸教育新方向</h2>
+			<h2 class="subTitle">Strait Education Leaders Forum</h2>
+			<h2 class="subTitle">Postmodern Education Development and Cross-Strait New Directions Education</h2>
+		</div>
+	</div><!--header_inner-->
+
+	<div id="nav">
+		<div id="nav_inner" class="container clearfix">
+			<ul id="navList" class="lineUL" >
+				<li><a href="index.html" class="active">首頁</a></li>
+				<li><a href="about.html">關於研討會</a></li>
+				<li><a href="members.html">研討會貴賓</a></li>
+				<li><a href="#">研討會發表</a></li>
+				<li><a href="#">最新消息</a></li>
+			</ul>
+			<ul id="navListRight" class="lineUL" >
+				<li><a href="#">政大教育</a></li>
+				<li><a href="#">政大周邊</a></li>
+			</ul>
+		</div>
+	</div>
+</header>
+
+
+<div id="content">
+	<div id="picShowOuter" class="container">
+		<div id="picShow">
+			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
+			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
+			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
+			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
+		</div>
+		<div id="picBtns">
+			<ul>
+				<li><a class="picBtn"></a></li>
+			</ul>
+		</div>
+	</div>
+	
+	<div id="news" class="container">
+		<h3>最新消息</h3>
+		
+		<div class="news">
+			<div class="img" style="background-image:url(img/news/9bbf6f84655154fa720887c3669202e8.jpg);"></div>
+			<h4>今天天氣真的很不錯</h4>
+			<p>今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，</p>
+		</div>
+		<div class="news">
+			<div class="img" style="background-image:url(img/news/0980116-1.jpg);"></div>
+			<h4>今天天氣真的很不錯</h4>
+			<p>今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，</p>
+		</div>
+		<div class="news news-last">
+			<div class="img" style="background-image:url(img/news/3949907923_21be5d1f28_o.jpg)"></div>
+			<h4>今天天氣真的很不錯</h4>
+			<p>今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，今天天氣真的很不錯，</p>
+		</div>
+	</div>
+	
+	
+	
+	<div id="schools" class="container clearfix">
+		<h3>與會學校</h3>
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/上海師範大學.jpg" width="100%">
+			</div>
+			<h4>上海師範大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/中國人民大學.jpg" width="100%">
+			</div>
+			<h4>中國人民大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/北京師範大學.jpg" width="100%">
+			</div>
+			<h4>北京師範大</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/西北大學.jpg" width="100%">
+			</div>
+			<h4>西北大學</h4>
+		</div>
+
+		<div class="school" style="margin-right:0;">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/浙江樹人大學.jpg"  width="100%">
+			</div>
+			<h4>浙江樹人大學</h4>
+		</div>
+		
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/海南師範大學.jpg"width="100%">
+			</div>
+			<h4>海南師範大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/清華大學.jpg"width="100%">
+			</div>
+			<h4>清華大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/廈門大學.jpg" width="100%">
+			</div>
+			<h4>廈門大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/新疆師範大學.jpg" width="100%">
+			</div>
+			<h4>新疆師範大</h4>
+		</div>
+
+		<div class="school"  style="margin-right:0;">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/寧波諾丁漢大學.jpg" width="100%">
+			</div>
+			<h4>寧波諾丁漢大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/華東師範大學.jpg" width="100%">
+			</div>
+			<h4>華東師範大學</h4>
+		</div>
+
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/瀋陽師範大學.jpg" width="100%">
+			</div>
+			<h4>瀋陽師範大學</h4>
+		</div>
+		
+		<div class="school">
+			<div class="schoolLogo" align="center">
+				<img src="img/schools/吉林師範大學.gif"width="100%">
+			</div>
+			<h4>吉林師範大學</h4>
+		</div>
+
+	</div>
+</div>
+
+<footer>
+</footer>
+
+
+
 
 
 
@@ -19,5 +192,23 @@
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script type="text/javascript">
+var nowPic;
+var totalPic = 0;
+$('.picshowPic').each(function(index, element) {	totalPic++;});console.log (totalPic);
+
+setTimeout ("autoSwitch()",5000);
+
+function autoSwitch (now){
+	
+}
+
+$('.picshowPic').on('click',switchPic());
+function switchPic (e){
+}
+
+
+
+</script>
 </body>
 </html>
