--- a/Teachers/Robin/publications.html
+++ b/Teachers/Robin/publications.html
@@ -8,6 +8,19 @@
 <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css">
 <link href="css/robin-all.css" rel="stylesheet" type="text/css">
 <style>
+@media screen and (min-width: 1500px) {
+body {
+	transform: scale(1.5);
+	-webkit-transform: scale(1.5); 
+	-webkit-transform-origin: 50% 0; 
+	-moz-transform: scale(1.5); 
+	-moz-transform-origin: 50% 0; 
+	-o-transform: scale(1.5); 
+	-o-transform-origin: 50% 0; 
+	-ms-transform: scale(1.5); 
+	-ms-transform-origin: 50% 0;}
+}
+
 </style>
 </head>
 <body>
