--- a/Teachers/PostModern/about.html
+++ b/Teachers/PostModern/about.html
@@ -15,13 +15,20 @@ a { display:block;}
 .rightContainer { width:80%; position:relative; float:left;}
 
 
-#leftNav { width:100%; border-radius:5px; border:#999999 solid 1px; overflow:hidden; background:rgba(153,255,153,.1);}
-#leftNav > li { width:100%; border-bottom:#999999 solid 1px;}
-#leftNav > li > a {padding:10px;}
-#leftNav > li:last-child { border:0;}
-#leftNav > li:hover {background:rgba(153,255,153,.5)}
+#aboutBtn { position:relative;}
+
+#aboutNav { width:100px; border-radius:5px;  overflow:hidden; background:#FFFFFF; display:none; position:absolute; top:42px; z-index:3; box-shadow:0px 0px 5px 2px #CCCCCC;}
+#aboutNav > li { width:100%;}
+#aboutNav > li > a {padding:5px;}
+#aboutNav > li:last-child { border:0;}
+#aboutNav > li:hover {background:#CCCCCC;}
+#aboutNav:hover, #aboutBtn:hover > #aboutNav { display:block;}
+
+
+
 </style>
 </head>
+
 <body>
 <header>
 	<div id="header_inner" class="container clearfix">
@@ -36,7 +43,18 @@ a { display:block;}
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html" class="active">首頁</a></li>
-				<li><a href="about.html">關於研討會</a></li>
+				<li id="aboutBtn">
+					<a href="about.html">關於研討會</a>
+					<ul id="aboutNav" class="clearfix">
+						<li><a href="#ideal">研討會宗旨</a></li>
+						<li><a href="#act">活動內容</a></li>
+						<li><a href="#subIssue">相關子題</a></li>
+						<li><a href="">流程</a></li>
+						<li><a href="">報名</a></li>
+						<li><a href="">住宿</a></li>
+						<li><a href="">Q&amp;A</a></li>
+					</ul>
+				</li>
 				<li><a href="members.html">研討會貴賓</a></li>
 				<li><a href="#">研討會發表</a></li>
 				<li><a href="#">最新消息</a></li>
@@ -52,52 +70,42 @@ a { display:block;}
 
 <div id="content">
 	<div id="about_Inner" class="container clearfix">
-		<div id="left_Nav" class="leftContainer">
+		<!--div id="left_Nav" class="leftContainer">
 			<ul id="leftNav">
-				<li><a href="">研討會宗旨</a></li>
-				<li><a href="">活動內容</a></li>
-				<li><a href="">相關子題</a></li>
-				<li><a href="">流程</a></li>
-				<li><a href="">報名</a></li>
-				<li><a href="">住宿</a></li>
-				<li><a href="">Q&amp;A</a></li>
 			</ul>
-		</div>
+		</div-->
+		<h3><a name="ideal"></a>計畫宗旨</h3>
+		<p>有鑑於後現代主義於現今社會持續的教育影響，本次國際學術研討會，旨在圖思兩岸教育研究交流之相關發展，俾利體現後現代論述於教育場域落實之精神，特針對當前兩岸文化與教育交流之未來發展，提供一個學術論述與意見交流之具體平台，藉此而舉辦「第一屆海峽兩岸教育學院領導人論壇---後現代教育發展與兩岸教育新方向」，經由兩岸教育學院領導人之學術交流及高峰論壇，提出巨觀之教育思考新方向，共同擘劃兩岸教育交流之新願景與永續發展藍圖。</p>
+
+		<h3><a name="act"></a>活動內容</h3>
+		<p>會議內容包含高峰論壇、論文發表、綜合討論以及外國學者參訪與演講等四項。</p>
+		<p><strong>一、高峰論壇：</strong></p>
+		<p>兩岸教育不論是在實際經營層面、發展現況及未來趨勢的議題，都存在許多互相學習與交流之處，本次研討會透過高峰論壇促進兩岸教育之學術交流，並共同關心兩岸教育領導與經營策略的未來，相信未來可攜手共進，為兩岸開創新局。</p>
+		<p><strong>二、論文發表：</strong></p>
+		<p>本論壇規劃出11場次的論文發表與（詳細內容請參見議程），對於後現代思潮所影響之教育領導、教育行政、學校經營、教育評鑑、課程教學、教育財政、教育哲學、教育史學、教育心理、輔導諮商與校園建築等議題，深入探討。</p>
+		<p><strong>三、綜合座談：</strong></p>
+		<p>將由全體與會來賓共同參與討論。</p>
+		<p><strong>四、外國學者參訪與演講：</strong></p>
+		<p>在研討會之餘安排參觀國內政經文教建設，並赴各大學進行學術演講和座談。</p>
+
 		
-		<div id="right_Content" class="rightContainer">
-			<h3>計畫宗旨</h3>
-			<p>有鑑於後現代主義於現今社會持續的教育影響，本次國際學術研討會，旨在圖思兩岸教育研究交流之相關發展，俾利體現後現代論述於教育場域落實之精神，特針對當前兩岸文化與教育交流之未來發展，提供一個學術論述與意見交流之具體平台，藉此而舉辦「第一屆海峽兩岸教育學院領導人論壇---後現代教育發展與兩岸教育新方向」，經由兩岸教育學院領導人之學術交流及高峰論壇，提出巨觀之教育思考新方向，共同擘劃兩岸教育交流之新願景與永續發展藍圖。</p>
-			
-			
-			<h3>會議各相關子題</h3>		
-			<ol>
-				<li>後現代教育領導</li>
-				<li>後現代教育行政</li>
-				<li>後現代學校經營</li>
-				<li>後現代教育評鑑 </li>
-				<li>後現代課程教學</li>
-				<li>後現代教育財政</li>
-				<li>後現代教育哲學</li>
-				<li>後現代教育史學</li>
-				<li>後現代教育心理</li>
-				<li>後現代輔導諮商</li>
-				<li>後現代校園建築</li>
-			</ol>
-			<p>&nbsp;</p>
-			<h3>活動內容</h3>
-			<p>會議內容包含高峰論壇、論文發表、綜合討論以及外國學者參訪與演講等四項。</p>
-			<p><strong>一、高峰論壇：</strong>兩岸教育不論是在實際經營層面、發展現況及未來趨勢的議題，都存在許多互相學習與交流之處，本次研討會透過高峰論壇促進兩岸教育之學術交流，並共同關心兩岸教育領導與經營策略的未來，相信未來可攜手共進，為兩岸開創新局。</p>
-			<p><strong>二、論文發表：</strong>本論壇規劃出11場次的論文發表與（詳細內容請參見議程），對於後現代思潮所影響之教育領導、教育行政、學校經營、教育評鑑、課程教學、教育財政、教育哲學、教育史學、教育心理、輔導諮商與校園建築等議題，深入探討。</p>
-			<p><strong>三、綜合座談：</strong>將由全體與會來賓共同參與討論。</p>
-			<p><strong>四、外國學者參訪與演講：在</strong>研討會之餘安排參觀國內政經文教建設，並赴各大學進行學術演講和座談。</p>
-			
-			
-			<h3>報名</h3>
-			<p></p>
-			
-			
-		</div>
-	
+		<h3><a name="subIssues"></a>相關子題</h3>		
+		<ol>
+			<li>後現代教育領導</li>
+			<li>後現代教育行政</li>
+			<li>後現代學校經營</li>
+			<li>後現代教育評鑑 </li>
+			<li>後現代課程教學</li>
+			<li>後現代教育財政</li>
+			<li>後現代教育哲學</li>
+			<li>後現代教育史學</li>
+			<li>後現代教育心理</li>
+			<li>後現代輔導諮商</li>
+			<li>後現代校園建築</li>
+		</ol>
+		
+		<p>&nbsp;</p>
+		
 	</div>
 </div>
 
