--- a/Teachers/PostModern/index.html
+++ b/Teachers/PostModern/index.html
@@ -14,6 +14,13 @@
 #schools {}
 .school { width:160px; margin-right:40px; float:left; }
 .schoolLogo { width:160px; height:160px; }
+
+.circleBtns { position:absolute; z-index:5; top:270px; left:850px; }
+.circleBtns li {float:left; margin-right:10px;}
+.circleBtns li a {  width:15px; height:15px; background:#CC66FF; border-radius:50%;}
+#picShow { position:relative;}
+
+
 </style>
 </head>
 <body>
@@ -24,8 +31,8 @@
 		<div id="title">
 			<h1 id="mainTitle">2013年第一屆海峽兩岸教育學院領導人論壇</h1>
 			<h2 class="subTitle" >後現代教育發展與兩岸教育新方向</h2>
-			<h2 class="subTitle">Strait Education Leaders Forum</h2>
-			<h2 class="subTitle">Postmodern Education Development and Cross-Strait New Directions Education</h2>
+			<!--h2 class="subTitle">Strait Education Leaders Forum</h2>
+			<h2 class="subTitle">Postmodern Education Development and Cross-Strait New Directions Education</h2-->
 		</div>
 	</div><!--header_inner-->
 
@@ -48,17 +55,24 @@
 
 
 <div id="content">
-	<div id="picShowOuter" class="container">
-		<div id="picShow">
-			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
-			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
-			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
-			<div id="pic1" class="picshowPic showingPic"><img src="img/pic1.png"></div>
-		</div>
-		<div id="picBtns">
-			<ul>
-				<li><a class="picBtn"></a></li>
-			</ul>
+	<div id="picShowOuter" >
+		<div id="picShowInner" class="container">
+			<div id="picShow">
+				<div id="pic1" class="picshowPic showingPic" ><img src="img/pic1.png"></div>
+				<div id="pic2" class="picshowPic" ><img src="img/pic2.jpg"></div>
+				<div id="pic3" class="picshowPic"><img src="img/pic3.jpg" width="100%"></div>
+				<ul class="circleBtns">
+					<li><a class="picBtn" data-pic="1"></a></li>
+					<li><a class="picBtn" data-pic="2"></a></li>
+					<li><a class="picBtn" data-pic="3"></a></li>
+				</ul>
+				<div id="bigBtns">
+					<div id="leftBtn" style="position:absolute; top:80px;  left:-100px; z-index:6"><img src="img/leftBtn.png" style="position:absolute;"></div>
+					<div id="rightBtn" style="position:absolute; top:80px; right:-100px; z-index:6"><img src="img/rightBtn.png"></div>
+				</div>
+			</div>
+
+
 		</div>
 	</div>
 	
@@ -193,14 +207,35 @@
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script type="text/javascript">
-var nowPic;
+var picArr = ["#pic1","#pic2","#pic3"];
+var nowPic = 0 ;
 var totalPic = 0;
+
 $('.picshowPic').each(function(index, element) {	totalPic++;});console.log (totalPic);
 
-setTimeout ("autoSwitch()",5000);
+function loop (){
+	setTimeout ("autoSwitch()",5000);
+}
+loop ();
+function autoSwitch (){
+	$(picArr[nowPic]).show().fadeOut();
+	var a = picArr[goPic(true)];
+	$(a).addClass("showingPic").hide().fadeIn(function (){});
+	console.log ($(picArr[nowPic]));
+	loop();
+}
+function goPic (dir){
+	if (dir) {
+		if (nowPic < totalPic - 1) { nowPic ++; } else { nowPic = 0;}
+		return nowPic;
+	}else {
+		if (nowPic > 0 ) { nowPic --; } else { nowPic = totalPic - 1;}
+		return nowPic;
+	}
+}
 
-function autoSwitch (now){
-	
+function good (){
+	console.log ("test");
 }
 
 $('.picshowPic').on('click',switchPic());
