--- a/Teachers/PostModern/join.html
+++ b/Teachers/PostModern/join.html
@@ -30,7 +30,18 @@
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html" class="active">首頁</a></li>
-				<li><a href="about.html">關於研討會</a></li>
+				<li id="aboutBtn">
+					<a href="about.html">關於研討會</a>
+					<ul id="aboutNav" class="clearfix">
+						<li><a href="#ideal">研討會宗旨</a></li>
+						<li><a href="#act">活動內容</a></li>
+						<li><a href="#subIssue">相關子題</a></li>
+						<li><a href="">流程</a></li>
+						<li><a href="">報名</a></li>
+						<li><a href="">住宿</a></li>
+						<li><a href="">Q&amp;A</a></li>
+					</ul>
+				</li>
 				<li><a href="members.html">研討會貴賓</a></li>
 				<li><a href="#">研討會發表</a></li>
 				<li><a href="#">最新消息</a></li>
