--- a/Teachers/PostModern/index.html
+++ b/Teachers/PostModern/index.html
@@ -30,9 +30,7 @@
 		<div id="logo" ><img src="img/image021.png" width="100" ></div>
 		<div id="title">
 			<h1 id="mainTitle">2013年第一屆海峽兩岸教育學院領導人論壇</h1>
-			<h2 class="subTitle" >後現代教育發展與兩岸教育新方向</h2>
-			<!--h2 class="subTitle">Strait Education Leaders Forum</h2>
-			<h2 class="subTitle">Postmodern Education Development and Cross-Strait New Directions Education</h2-->
+			<h2 id="subTitle" >後現代教育發展與兩岸教育新方向</h2>
 		</div>
 	</div><!--header_inner-->
 
@@ -40,7 +38,18 @@
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
 				<li><a href="index.html" class="active">首頁</a></li>
-				<li><a href="about.html">關於研討會</a></li>
+				<li id="aboutBtn">
+					<a href="about.html">關於研討會</a>
+					<ul id="aboutNav" class="clearfix">
+						<li><a href="#ideal">研討會宗旨</a></li>
+						<li><a href="#act">活動內容</a></li>
+						<li><a href="#subIssue">相關子題</a></li>
+						<li><a href="">流程</a></li>
+						<li><a href="">報名</a></li>
+						<li><a href="">住宿</a></li>
+						<li><a href="">Q&amp;A</a></li>
+					</ul>
+				</li>
 				<li><a href="members.html">研討會貴賓</a></li>
 				<li><a href="#">研討會發表</a></li>
 				<li><a href="#">最新消息</a></li>
