--- a/Teachers/PostModern/about.html
+++ b/Teachers/PostModern/about.html
@@ -34,9 +34,9 @@ a { display:block;}
 	<div id="nav">
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
-				<li><a href="index.html" class="active">首頁</a></li>
+				<li><a href="index.html" >首頁</a></li>
 				<li id="aboutBtn">
-					<a href="about.html">關於研討會</a>
+					<a href="about.html" class="active">關於研討會</a>
 					<ul id="aboutNav" class="clearfix">
 						<li><a href="#ideal">研討會宗旨</a></li>
 						<li><a href="#act">活動內容</a></li>
@@ -48,12 +48,12 @@ a { display:block;}
 					</ul>
 				</li>
 				<li><a href="members.html">研討會貴賓</a></li>
-				<li><a href="#">研討會發表</a></li>
-				<li><a href="#">最新消息</a></li>
+				<li><a href="publications.html">研討會發表</a></li>
+				<li><a href="news.html">最新消息</a></li>
 			</ul>
 			<ul id="navListRight" class="lineUL" >
-				<li><a href="#">政大教育</a></li>
-				<li><a href="#">政大周邊</a></li>
+				<li><a href="http://edu.nccu.edu.tw/main.php">政大教育</a></li>
+				<li><a href="play.html">政大周邊</a></li>
 			</ul>
 		</div>
 	</div>
