--- a/Teachers/PostModern/members.html
+++ b/Teachers/PostModern/members.html
@@ -31,7 +31,7 @@
 	<div id="nav">
 		<div id="nav_inner" class="container clearfix">
 			<ul id="navList" class="lineUL" >
-				<li><a href="index.html" class="active">首頁</a></li>
+				<li><a href="index.html">首頁</a></li>
 				<li id="aboutBtn">
 					<a href="about.html">關於研討會</a>
 					<ul id="aboutNav" class="clearfix">
@@ -44,7 +44,7 @@
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
 				</li>
-				<li><a href="members.html">研討會貴賓</a></li>
+				<li><a href="members.html" class="active">研討會貴賓</a></li>
 				<li><a href="#">研討會發表</a></li>
 				<li><a href="#">最新消息</a></li>
 			</ul>
