--- a/Teachers/PostModern/join.html
+++ b/Teachers/PostModern/join.html
@@ -44,7 +44,7 @@
 						<li><a href="#act">活動內容</a></li>
 						<li><a href="#subIssue">相關子題</a></li>
 						<li><a href="">流程</a></li>
-						<li><a href="">報名</a></li>
+						<li><a href="join.html">報名</a></li>
 						<li><a href="">住宿</a></li>
 						<li><a href="">Q&amp;A</a></li>
 					</ul>
@@ -163,8 +163,49 @@
 	</div>
 </div>
 <footer>
-</footer>
-<script src="js/jquery.min.js" type="text/javascript"></script>
+	<div id="footerInner" class="container">
+		<div id="footerLogo" class="clearfix">
+			<img src="img/image021.png" width="60" class="footerInfoBox" style="width:60px; padding:30px">
+			<div id="footerTitle" class="footerInfoBox" style="width:380px; padding-left:20px">
+				<h4>屆海峽兩岸教育學院領導人論壇</h4>
+				<p>主辦單位：國立政治大學教育學院</p>
+				<p>協辦單位：國立政治大學教育行政與政策研究所<br>
+				<span style="margin-left:5em;">國立政治大學教育系</span></p>
+			</div>
+			<div id="contact" class="footerInfoBox" style="width:400px;">
+				<h4>聯絡方式</h4>
+				<p>電話：(02)2939-3091轉62331或62281</p>
+				<p>傳真：(02)29387717</p>
+				<p>E-Mail：nccuedu@nccu.edu.tw</p>
+				<p>地址：11605 台北市文山區指南路2段64號 國立政治大學教育學系</p>
+				
+			</div>
+		</div>
+		
+	</div>
+<!--div id="footerInner" class="container">
+	<div id="footNavs">
+		<div class="footNav">
+			<h4>研討會首頁</h4>
+			<ul>
+				<li><a></a></li>
+				<li><a></a></li>
+				<li><a></a></li>
+			</ul>
+		</div>
+
+		<div class="footNav">
+			<h4>關於研討會</h4>
+			<ul>
+				<li><a></a></li>
+				<li><a></a></li>
+				<li><a></a></li>
+			</ul>
+		</div>
+
+	</div>
+</div-->
+</footer><script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
 <script type="text/javascript">
