--- a/TEDx/blank.html
+++ b/TEDx/blank.html
@@ -5,18 +5,14 @@
 <title>Test Page</title>
 <link href="css/jquery-ui.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"-->
-<!--link href="css/reset.css" rel="stylesheet" type="text/css"-->
+<link href="css/reset.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
-<style>
+<link href="css/tedxnccu.css" rel="stylesheet" type="text/css"><style>
 
 </style>
 </head>
 <body>
-<div id="container">
 
-
-
-</div>
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <!--script src="js/bootstrap.min.js" type="text/javascript"></script-->
