--- a/Teachers/PostModern/join_success.html
+++ b/Teachers/PostModern/join_success.html
@@ -33,7 +33,7 @@
 			</ul>
 			<ul id="navListRight" class="lineUL" >
 				<li><a href="#">政大教育</a></li>
-				<li><a href="#">政大周邊</a></li>
+				<li><a href="http://www.nccu.edu.tw">政大周邊</a></li>
 			</ul>
 		</div>
 	</div>
@@ -43,5 +43,13 @@
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
 <script src="js/bootstrap.min.js" type="text/javascript"></script>
+<script language="javascript" type="text/javascript">
+$(document).ready(function(e) {
+	$.post('test.html',{name:'John',phone:'988'});	
+});
+
+
+
+</script>
 </body>
 </html>
