--- a/Teachers/PostModern/index.html
+++ b/Teachers/PostModern/index.html
@@ -89,7 +89,7 @@
 		</div>
 	</div>
 	
-	<div id="news" class="container">
+	<div id="news" class="container clearfix">
 		<h3>最新消息</h3>
 		<div id="newsInner" class="inner">
 			<div class="news">
