--- a/TEDx/acts/index.html
+++ b/TEDx/acts/index.html
@@ -16,11 +16,12 @@
 </head>
 <body>
 
-<script src="js/jquery.min.js" type="text/javascript"></script>
-<script src="js/jquery-ui.js" type="text/javascript"></script>
-<!--script src="js/bootstrap.min.js" type="text/javascript"></script-->
-<script src="js/parse-1.2.8.min.js" type="text/javascript"></script>
-<script src="js/TEDxNCCU.js" type="text/javascript"></script>
+<script src="..js/jquery.min.js" type="text/javascript"></script>
+<script src="..js/jquery-ui.js" type="text/javascript"></script>
+<!--script src="..js/bootstrap.min.js" type="text/javascript"></script-->
+<script src="..js/parse-1.2.8.min.js" type="text/javascript"></script>
+<script src="..js/TEDxNCCU.js" type="text/javascript"></script>
+
 <script type="text/javascript">
 
 </script>
