--- a/TEDx/about.html
+++ b/TEDx/about.html
@@ -48,12 +48,14 @@
 </div>
 
 <div id="banner">
-	<div class="bannerPic-small">
+	<div class="bannerPic-small-cover">
 		<div class="container">
 			<h1>
 				關於TEDxNCCU
 			</h1>
 		</div>
+	</div>
+	<div class="bannerPic-small">
 	</div>
 </div>
 
