--- a/TEDx/index.html
+++ b/TEDx/index.html
@@ -62,7 +62,13 @@
 						<li><a href="#">演講分享</a></li>
 					</ul>
 				</li>
-				<li><a href="about.html">關於我們</a></li>
+				<li class="withSubNav clearfix">
+					<a href="about.html">關於我們</a>
+					<ul class="subNav">
+						<li><a href="#">關於TEDx</a></li>
+						<li><a href="#">關於TEDxNCCU</a></li>
+					</ul>
+				</li>
 				<li><a href="contact.html">聯繫我們</a></li>	
 			</ul>
 		</div>
@@ -91,9 +97,9 @@
 
 <div id="banner">
 	<div class="bannerPic shd-large">
-		<div id="pic1" class="bannerPic picshowPic showingPic" ><img src="img/art-pre-pic.jpg"></div>
-		<div id="pic2" class="bannerPic picshowPic" ><img src="../image/7445668486_2ffafcff86_o.jpg"></div>
-		<div id="pic3" class="bannerPic picshowPic"><img src="../image/564545_10200584505310978_1954257377_n.jpg" ></div>
+		<div id="pic1" class="bannerPic picshowPic showingPic" ><img src="img/pic1.jpg"></div>
+		<div id="pic2" class="bannerPic picshowPic" ><img src="img/pic2.jpg"></div>
+		<div id="pic3" class="bannerPic picshowPic"><img src="img/pic3.jpg"></div>
 	</div>
 	
 	<div class="container" style="height:500px; position:relative;">
@@ -104,11 +110,11 @@
 			</div>
 			<div id="info2" class="box bannerInfo">
 				<h3>From IDeas To Actions</h3>
-				<p>今天天氣還不錯，我在為一上班，遇到很好的主管，有冷氣吹，有電腦用，有事情做不會無聊，天啊我在打什麼費文，沒辦法，為了測試藥用...今天天氣還不錯，我在為一上班，遇到很好的主管，有冷氣吹，有電腦用，有事情做不會無聊，天啊我在打什麼費文，沒辦法，為了測試藥用...</p>
+				<p>想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!想動嘛?就來聽想●動吧!</p>
 			</div>
 			<div id="info3" class="box bannerInfo">
 				<h3>Good Morning</h3>
-				<p>今天天氣還不錯，我在為一上班，遇到很好的主管，有冷氣吹，有電腦用，有事情做不會無聊，天啊我在打什麼費文，沒辦法，為了測試藥用...今天天氣還不錯，我在為一上班，遇到很好的主管，有冷氣吹，有電腦用，有事情做不會無聊，天啊我在打什麼費文，沒辦法，為了測試藥用...</p>
+				<p>祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣祈求天天好天氣</p>
 			</div>
 		</div>
 
