--- a/TEDx/spnsors.html
+++ b/TEDx/spnsors.html
@@ -10,11 +10,77 @@
 <!--link href="css/bootstrap.min.css" rel="stylesheet" type="text/css"-->
 <link href="css/reset.css" rel="stylesheet" type="text/css">
 <!--link href="css/bootstrap-responsive.min.css" rel="stylesheet" type="text/css"-->
-<link href="css/tedxnccu.css" rel="stylesheet" type="text/css"><style>
+<link href="css/tedxnccu2.css" rel="stylesheet" type="text/css"><style>
 
 </style>
 </head>
 <body>
+<nav>
+	<div id="nav" class="container clearfix">
+		<div style="float:left;">
+				<img src="img/TEDxNCCU5.png" height="30" style="margin:8px 0px 3px 0px;">
+		</div>
+		<div style="float:right">
+			<ul id="mainNav" class="hrzUL clearfix">
+				<li><a href="index.html">首頁</a></li>
+				<li><a href="spnsors.html">贊助夥伴</a></li>
+				<li class="withSubNav clearfix">
+					<a href="acts/index.html" >TED活動</a>
+					<ul class="subNav">
+						<li><a href="#">2013 From Idea To Action</a></li>
+					</ul>
+				</li>
+				<li class="withSubNav clearfix">
+					<a href="blog/index.html">文章分享</a>
+					<ul class="subNav">
+						<li><a href="#">所有文章</a></li>
+						<li><a href="#">心得分享</a></li>
+						<li><a href="#">演講分享</a></li>
+					</ul>
+				</li>
+				<li><a href="about.html">關於我們</a></li>
+				<li><a href="contact.html">聯繫我們</a></li>	
+			</ul>
+		</div>
+	</div>
+</nav>
+<div style="width:100%; height:44px;">
+</div>
+
+
+<div id="banner">
+	<div class="bannerPic-small-cover">
+		<div class="container">
+			<h1>友情贊助</h1>
+		</div>
+	</div>
+	<div class="bannerPic-small">
+	</div>
+</div>
+			
+
+<div class="outer bg">
+	<div class="container block shd">
+		<h2>合作夥伴</h2>
+		
+	</div>
+</div>
+<div class="outer bg">
+	<div class="container block shd">
+		<h2>加入我們!!</h2>
+	</div>
+</div>
+
+<footer class="outer-small">
+	<div class="container clearfix">
+		<ul class="hrzUL foot_nav">
+			<li><a href="act/FromIdeaToAction.html">From Idea to Action</a></li>
+			<li><a href="sponsor.html">贊助我們</a></li>
+			<li><a href="contact.html">聯絡我們</a></li>
+		</ul>
+	</div>
+</footer>
+
 
 <script src="js/jquery.min.js" type="text/javascript"></script>
 <script src="js/jquery-ui.js" type="text/javascript"></script>
