--- a/TEDx/about.html
+++ b/TEDx/about.html
@@ -23,7 +23,9 @@
 		<div style="float:right">
 			<ul id="mainNav" class="hrzUL clearfix">
 				<li><a href="index.html">首頁</a></li>
-				<li><a href="spnsors.html">贊助夥伴</a></li>
+				
+				<li><a href="spnsors.html">贊助夥伴</a>
+				</li>
 				<li class="withSubNav clearfix">
 					<a href="acts/index.html" >TED活動</a>
 					<ul class="subNav">
@@ -31,15 +33,22 @@
 					</ul>
 				</li>
 				<li class="withSubNav clearfix">
-					<a href="blog/index.html">文章分享</a>
+					<a href="index.html">文章分享</a>
 					<ul class="subNav">
-						<li><a href="#">所有文章</a></li>
-						<li><a href="#">心得分享</a></li>
-						<li><a href="#">演講分享</a></li>
+						<li><a href="#">部落格</a></li>
+						<li><a href="#">TED TALK</a></li>
+						<li><a href="#">活動成果</a></li>
 					</ul>
 				</li>
-				<li><a href="about.html">關於我們</a></li>
-				<li><a href="contact.html">聯繫我們</a></li>	
+				<li><a href="aboutTEDx.html">關於TEDx</a></li>	
+				<li class="withSubNav clearfix"><a href="about.html">關於我們</a>
+					<ul class="subNav">
+						<li><a href="#">團隊介紹</a></li>
+						<li><a href="#">團隊理念</a></li>
+						<li><a href="contact.html">聯繫我們</a></li>
+					</ul>
+				</li>
+
 			</ul>
 		</div>
 	</div>
@@ -47,17 +56,30 @@
 <div style="width:100%; height:44px;">
 </div>
 
+
 <div id="banner">
 	<div class="bannerPic-small-cover">
 		<div class="container">
-			<h1>
-				關於TEDxNCCU
-			</h1>
+			<div class="title">
+				<h1>關於TEDxNCCU</h1>
+			</div>
+			<div style="padding:10px; color:white; display:block; ">
+				文章列表&nbsp;&nbsp; >> &nbsp;所有文章&nbsp;
+			</div>
+
 		</div>
 	</div>
-	<div class="bannerPic-small">
+	<div class="bannerPic-small shd-large">
 	</div>
+	
+	<!--div class="bread subBanner" style="position:absolute; top:250px; z-index:30;">
+		<div class="container">
+
+		</div>
+	</div-->	
 </div>
+
+
 
 <div id="content" class="outer bg">
 	<div class="container">
