--- a/TEDx/spnsors.html
+++ b/TEDx/spnsors.html
@@ -47,16 +47,19 @@
 <div style="width:100%; height:44px;">
 </div>
 
-
 <div id="banner">
 	<div class="bannerPic-small-cover">
 		<div class="container">
-			<h1>友情贊助</h1>
+			<div class="title">
+				<h1>友情贊助</h1>
+			</div>
 		</div>
 	</div>
 	<div class="bannerPic-small">
 	</div>
 </div>
+
+
 			
 
 <div class="outer bg">
